Style consistency updates

--- a/dungeon/static/dungeon/end_screen.css
+++ b/dungeon/static/dungeon/end_screen.css
@@ -1,10 +1,10 @@
 /* Designed by Brendon Wolfe on April 1st */
+/* Modified by Brendon Wolfe for consistency on April 7th */
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
 body {
     background-color: #181818;
-    padding-top: 15vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,27 +18,27 @@ body {
     justify-content: center;
     background-color: #121212;
     width: 60%;
-    max-width: 600px;
+    max-width: 60vw;
     border-radius: 20px;
-    padding: 2rem;
     box-shadow: 2px 2px 15px rgba(255, 221, 87, 0.8);
     text-align: center;
+    padding: 3vw;
 }
 
 h1 {
     color: #ffdd57;
     text-shadow: 2px 2px 10px rgba(255, 221, 87, 0.8);
-    margin-bottom: 1rem;
+    margin-bottom: 2vh;
     font-size: 2rem;
 }
 
 h2 {
-    margin-top: 1rem;
+    margin-top: 2vh;
 }
 
 .button {
     display: inline-block;
-    padding: 0.75rem 1.5rem;
+    padding: 2vh 3.5vw;
     background-color: #39FF14;
     color: #121212;
     font-family: 'Rajdhani', sans-serif;
@@ -51,6 +51,5 @@ h2 {
 }
 
 .button:hover {
-    background-color: #2ECC71;
-    box-shadow: 0 0 15px rgba(46, 204, 113, 0.8);
+    background-color: #28a828;
 }
