--- a/gym/templates/gym/remove_member.html
+++ b/gym/templates/gym/remove_member.html
@@ -2,7 +2,7 @@
 {% extends 'fitness/header.html' %}
 {% load static %}
 {% block content %}
-<link rel="stylesheet" type="text/css" href="{% static 'gym/remove_knights.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'gym/remove_member.css' %}">
 
 <div class="container">
     <h1>Remove Knight</h1>
