--- a/dungeon/static/dungeon/battle_view.css
+++ b/dungeon/static/dungeon/battle_view.css
@@ -1,3 +1,6 @@
+/* Designed by Brendon Wolfe on April 1st */
+/* Modified by Brendon Wolfe for consistency on April 7th */
+
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
 body {
@@ -54,27 +57,27 @@ body {
     align-items: center;
     width: 50%;
     height: 15%;
-    padding: 5px;
+    padding: 1vh;
     background-color: rgba(35, 35, 35, 0.8);
     border-radius: 10px;
     z-index: 3;
 }
 
-.inventory_container > div {
+.inventory_container div {
     text-align: center;
     font-size: 0.4rem;
 }
 
 .itemSlot {
     border: 2px solid rgba(255, 255, 255, 0.3); 
-    width: 72px;
-    height: 72px;
+    width: 100vh;
+    height: 8vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: rgba(20, 20, 20, 0.8); 
-    margin: 5px; 
+    margin: 1vh; 
     border-radius: 5px;
 }
 
@@ -87,11 +90,11 @@ body {
 .actions_container {
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 1vh;
     position: absolute;
-    bottom: 20%;
+    bottom: 16%;
     right: 1%; 
-    padding: 10px;
+    padding: 1vh;
     background-color: rgba(35, 35, 35, 0.8);
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(255, 221, 87, 0.5);
@@ -100,18 +103,24 @@ body {
 }
 
 .actionButton {
+    white-space: wrap; 
+    overflow: hidden;     
+    text-overflow: ellipsis;  
+    display: inline-block;
+    max-width: 100%;  
     background: #39FF14;
     color: #121212;
-    padding: 12px 20px;
+    padding: 2vh 2vw;
     border-radius: 8px;
     text-decoration: none;
-    font-size: 15px;
+    font-size: .9rem;
     font-weight: bold;
+    overflow-wrap: normal;
     transition: transform 0.2s, background 0.3s;
 }
 
 .actionButton:hover {
-    background: #2ECC71;
+    background: #28a828;
     transform: scale(1.05);
 }
 
@@ -122,7 +131,7 @@ body {
     text-align: center;
     color: #ffdd57;
     text-shadow: 2px 2px 5px rgba(255, 221, 87, 0.8);
-    padding: 10px;
+    padding: 1vh;
     background-color: rgba(35, 35, 35, 0.8);
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(255, 221, 87, 0.5);
@@ -132,7 +141,7 @@ body {
 }
 
 .player_info_container h1 {
-    font-size: 20px;
+    font-size: 1.2rem;
 }
 
 #health_bar, #enemy_health_bar {
@@ -144,13 +153,12 @@ body {
 
 progress {
     width: 100%;
-    height: 20px;
     border-radius: 5px;
     background: black;
 }
 
 .monster_health::-webkit-progress-value {
-    background: #ff4444;
+    background: #cc0000;
     border-radius: 5px;
 }
 
