--- a/dungeon/static/dungeon/inventory.css
+++ b/dungeon/static/dungeon/inventory.css
@@ -1,4 +1,8 @@
 /* Designed by Brendon Wolfe on March 31st*/
+/* Modified by Brendon Wolfe for consistency on April 7th */
+
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
+
 body{
     background-color: #181818;
 }
@@ -10,7 +14,7 @@ body{
     justify-content: center;
     width: 80%;
     margin: 10vh auto;
-    padding: 20px;
+    padding: 3vh;
     background-color: #121212;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(255, 221, 87, 0.8);
@@ -52,16 +56,16 @@ body{
     font-size: 14px;
 }
 
-.inventory_container > div {
+.inventory_container div {
     background-color: #232323;
-    padding: 15px;
+    padding: 3vh;
     border-radius: 8px;
     text-align: center;
     box-shadow: 0 0 10px rgba(57, 255, 20, 0.6);
     transition: transform 0.3s ease-in-out;
 }
 
-.inventory_container > div:hover {
+.inventory_container div:hover {
     transform: scale(1.05);
     z-index: 0;
 }
