--- a/dungeon/static/dungeon/view_milestones.css
+++ b/dungeon/static/dungeon/view_milestones.css
@@ -1,3 +1,6 @@
+/* Designed by Brendon Wolfe on March 31st */
+/* Modified by Brendon Wolfe for consistency on April 7th */
+
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
 body {
@@ -17,6 +20,7 @@ body {
     margin: 5vh auto;
     border-radius: 50px;
     box-shadow: 0px 0px 10px rgba(255, 221, 87, 0.8);
+    padding-bottom: 2vh;
 }
 
 h1 {
@@ -27,7 +31,7 @@ h1 {
 
 p {
     font-size: 1rem;
-    margin: 8px 0;
+    margin: .5vh 0;
 }
 
 ul {
@@ -39,9 +43,9 @@ ul {
 
 li {
     background: #121212;
-    padding: 20px;
+    padding: 1vh;
     border-radius: 10px;
-    margin: 15px 0;
+    margin: 4vh 0;
     box-shadow: 0 0 10px rgba(57, 255, 20, 0.6);
 }
 
@@ -60,8 +64,8 @@ h3 {
     display: inline-block;
     background: #ffdd57;
     color: black;
-    padding: 12px 18px;
-    margin-top: 10px;
+    padding: 1.5vh 2vw;
+    margin-top: 1vh;
     font-weight: bold;
     border-radius: 5px;
     text-decoration: none;
