--- a/exercises/static/exercises/search_exercises.css
+++ b/exercises/static/exercises/search_exercises.css
@@ -1,5 +1,6 @@
 /* Designed by Brendon Wolfe on February 16th */
 /* Responsive design developed by Eli Sepulveda on March 8th */
+/* Modified by Brendon Wolfe for consistency on April 7th */
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
@@ -23,18 +24,17 @@ h2 {
 ul {
     width: fit-content;
     background-color: #282828;
-    max-width: 25rem;
-    padding: 1.5rem 4.5rem;
-    box-shadow: 0rem 0rem 1rem rgb(55, 255, 25, 0.5);
-    border-radius: .625rem;
+    max-width: 25vw;
+    padding: 3vh 5vw;
+    box-shadow: 0 0 10px rgb(55, 255, 25, 0.5);
+    border-radius: 10px;
     list-style-type: none;
 }   
 
 li {
-    margin-bottom: .625rem;
-    font-family: 'Rajdhani', sans-serif;
+    margin-bottom: 1vh;
     font-size: 1.2rem;
-    border-top: pink;
+    border-top: white;
     border-style: solid;
     border-width: 0 0 1px 0;
     text-align: center;
@@ -53,8 +53,8 @@ ul li a:hover{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 0.75rem;
-    margin-bottom: 2rem;
+    gap: 1vw;
+    margin-bottom: 4vh;
 }
 
 .search-exercises-form label {
@@ -63,18 +63,18 @@ ul li a:hover{
 }
 
 .search-exercises-form input {
-    padding: 0.5rem;
-    border-radius: 0.3rem;
-    border: 0.06rem solid #ffdd57;
+    padding: 1vh;
+    border-radius: 5px;
+    border: 1px solid #ffdd57;
     font-size: 1rem;
     background-color: #232323;
     color: white;
 }
 
 .search-exercises-form button {
-    padding: 0.6rem 1rem;
+    padding: 1.5vh 1.5vw;
     border: none;
-    border-radius: 0.25rem;
+    border-radius: 4px;
     font-family: 'Rajdhani', sans-serif;
     font-weight: bold;
     cursor: pointer;
@@ -121,7 +121,7 @@ ul li a:hover{
     color: black;
     font-size: 1.1rem;
     font-weight: bold;
-    padding: 10px 20px;
+    padding: 1.5vh 2vw;
     border: none;
     border-radius: 8px;
     cursor: pointer;
@@ -138,7 +138,7 @@ ul li a:hover{
     color: #28a828;
     font-size: 1.1rem;
     font-weight: bold;
-    padding: 10px 20px;
+    padding: 1.5vh 2vw;
     border: none;
     border-radius: 8px;
     cursor: default ;
@@ -150,13 +150,14 @@ ul li a:hover{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-family: 'Rajdhani', sans-serif;
     background-color: #121212;
     box-shadow: 0px 0px 10px rgba(255, 221, 87, 0.8);
     height: 100%;
     width: 60%;
     margin-left: 20%;
     border-radius: 50px;
-    padding-bottom: 1rem;
+    padding-bottom: 1vh;
     margin-bottom: 1vh;
 }
 
@@ -165,6 +166,10 @@ ul li a:hover{
 }
 
 @media screen and (max-width: 600px) {
+    body{
+        padding-top: 2vh;
+    }
+
     h1 {
         font-size: 1.5rem;
     }
@@ -176,9 +181,9 @@ ul li a:hover{
     .container {
         margin-left: 15%;
         width: 70%;
-        padding: 1rem;
+        padding: 1vh;
         border-radius: 20px;
-        margin-bottom: 10%;
+        margin-bottom: 18%;
     }
 
     ul {
@@ -188,7 +193,7 @@ ul li a:hover{
 
     .search-exercises-form {
         flex-direction: column;
-        gap: 0.5rem;
+        gap: 1vh;
     }
 
     .search-exercises-form input {
@@ -200,16 +205,19 @@ ul li a:hover{
     }
 
     .footer {
+        display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
         position: fixed;
-        bottom: 12%;
-        right: 0;
+        bottom: 14%;
+        right: 2%;
         width: 15%;
-        text-align: center;
         background-color: #181818;
-        padding: 0.5rem;
         border: 1px solid #39FF14;
         overflow: hidden;
+        padding-right: 0;
+        padding-left: 1vw;
     }
 
     .logoDivSearch{
@@ -221,7 +229,7 @@ ul li a:hover{
         align-items: center;
         justify-content: center;
         height: 12vh;
-        background-color: #181818;
+        background-color: none;
         border-radius: 15px;
         padding: 1vh 1vh;
         margin-left: .5vh;
