--- a/exercises/static/exercises/view_exercises.css
+++ b/exercises/static/exercises/view_exercises.css
@@ -1,5 +1,6 @@
 /* Designed by Eli Sepulveda on February 17th */
 /* Updated by Brendon Wolfe on February 21st */
+/* Modified by Brendon Wolfe for consistency on April 7th */
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
@@ -23,29 +24,29 @@ body {
     align-items: center;
     justify-content: center;
     width: 80%;
-    max-width: 900px;
-    padding: 1.5rem;
+    max-width: 80vw;
+    padding: 3vh;
     background-color: #121212;
-    border-radius: 0.75rem;
+    border-radius: 10px;
     box-shadow: 0px 0px 8px rgba(255, 221, 87, 0.9);
 }
 
 .detail_div {
     width: 90%;
     background-color: #181818;
-    padding: 1rem;
-    padding-top: .5rem;
+    padding: 2vh;
+    padding-top: 1vh;
     border: 2px solid #39FF14;
-    border-radius: 0.5rem;
+    border-radius: 8px;
     text-align: center;
-    margin-bottom: 1.5rem;
+    margin-bottom: 3vh;
 }
 
 .exercise_name {
     font-size: 2rem;
     color: #ffdd57;
     text-shadow: 2px 2px 10px rgba(255, 221, 87, 0.8);
-    margin-bottom: 0.5rem;
+    margin-bottom: 1vh;
     font-weight: bold;
 }
 
@@ -59,7 +60,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 1rem;
+    margin-top: 2vh;
 }
 
 .video_div ul {
@@ -75,21 +76,25 @@ body {
     width: 80%;
     height: 40vh;
     border: 2px solid #39FF14;
-    border-radius: 0.5rem;
+    border-radius: 8px;
     box-shadow: 0px 0px 8px rgba(57, 255, 20, 0.5);
 }
 
 .button_div {
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 4vh;
+    margin-bottom: 3vh;
 }
 
 .return_button {
     font-size: 1.2rem;
     background-color: #39FF14;
-    padding: 0.6rem 1.2rem;
-    margin-bottom: 1rem;
-    border-radius: 0.5rem;
+    padding: 1.5vh 2vw;
+    margin-bottom: 1.5vh;
+    border-radius: 8px;
     color: #121212;
     text-decoration: none;
     font-weight: bold;
@@ -98,20 +103,4 @@ body {
 
 .return_button:hover {
     background-color: #2ECC71;
-}
-
-@media screen and (max-width: 768px) {
-    .container {
-        width: 90%;
-        padding: 1rem;
-    }
-    .exercise_name {
-        font-size: 1.75rem;
-    }
-    .exercise_description {
-        font-size: 1rem;
-    }
-    .video_div ul iframe {
-        height: 40vh;
-    }
 }
