--- a/fitness/static/fitness/assign_tasks.css
+++ b/fitness/static/fitness/assign_tasks.css
@@ -1,4 +1,5 @@
 /* Designed by Eli Sepulveda on March 18th */
+/* Modified by Brendon Wolfe for consistency on April 7th */
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
@@ -12,7 +13,7 @@ body {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    min-height: 100vh;
+    min-height: 80vh;
     justify-content: center;
 }
 
@@ -20,41 +21,36 @@ h1 {
     font-size: 2.2rem;
     color: #ffdd57;
     text-shadow: 2px 2px 10px rgba(255, 221, 87, 0.8);
-    margin-bottom: 1rem;
+    margin-bottom: 2vh;
 }
 
-form {
+.assignForm {
     background-color: #121212;
     padding: 5vw;
-    border-radius:50px;
+    border-radius: 50px;
     box-shadow: 0px 0px 10px rgba(255, 221, 87, 0.3);
     width: 60%;
-    max-width: 500px;
+    max-width: 45vw;
     text-align: left;
 }
 
-form label {
+.assignForm label {
     font-weight: bold;
     color: #ffdd57;
     display: block;
-    margin-top: 10px;
+    margin-top: 1vh;
 }
 
 input, select {
     background-color: #1a1a1a;
     color: white;
     border: 1px solid #ffdd57;
-    padding: 10px;
+    padding: 1vh;
     border-radius: 5px;
     font-size: 1rem;
     width: 100%;
     transition: border-color 0.3s ease;
-    margin-top: 5px;
-}
-
-input:focus, select:focus {
-    border-color: #f4c430;
-    outline: none;
+    margin-top: .5vh;
 }
 
 select {
@@ -62,21 +58,21 @@ select {
     cursor: pointer;
 }
 
-button {
+.assignButton {
     background-color: #35FF14;
     color: #232323;
     font-size: 1.2rem;
     font-weight: bold;
-    padding: 10px 20px;
+    padding: 1.5vh 3vw;
     border: none;
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.3s, transform 0.2s;
     width: 100%;
-    margin-top: 1rem;
+    margin-top: 2vh;
 }
 
-button:hover {
-    background-color: #35FF90;
+.assignButton:hover {
+    background-color: #28a828;
     transform: scale(1.05);
 }
