--- a/fitness/static/fitness/complete_daily.css
+++ b/fitness/static/fitness/complete_daily.css
@@ -1,3 +1,6 @@
+/* Designed by Eli Sepulveda on  March 29th */
+/* Modified by Brendon Wolfe for consistency on April 7th */
+
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
 body {
@@ -10,14 +13,14 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    padding-top: 15vh;
+    padding-top: 10vh;
 }
 
 .container {
     background-color: #121212;
     width: 60%;
-    max-width: 500px;
-    padding: 2rem;
+    max-width: 48vw;
+    padding: 5vh;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(255, 221, 87, 0.8);
     text-align: center;
@@ -27,7 +30,7 @@ h1 {
     color: #ffdd57;
     font-size: 2rem;
     text-shadow: 2px 2px 5px rgba(255, 221, 87, 0.8);
-    margin-bottom: 1rem;
+    margin-bottom: 2vh;
 }
 
 .complete-daily-form {
@@ -39,7 +42,7 @@ h1 {
 label {
     font-size: 1.2rem;
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: 1vh;
     display: block;
 }
 
@@ -47,30 +50,30 @@ input {
     background-color: #232323;
     color: white;
     font-size: 1rem;
-    padding: 10px;
+    padding: 1.5vh;
     width: 80%;
     border: 2px solid #ffdd57;
     border-radius: 5px;
-    margin-top: 5px;
+    margin-top: .75vh;
     text-align: center;
 }
 
-button.submit-button {
+.submit-button {
     background-color: #39FF14;
     color: black;
     font-size: 1.2rem;
     font-weight: bold;
-    padding: 12px 24px;
+    padding: 2vh 4vw;
     border: none;
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.3s, transform 0.2s;
     box-shadow: 0px 0px 10px rgba(57, 255, 20, 0.6);
-    margin-top: 1rem;
+    margin-top: 2vh;
     width: 60%;
 }
 
-button.submit-button:hover {
+.submit-button:hover {
     background-color: #28a828;
     transform: scale(1.1);
 }
