--- a/fitness/static/fitness/home.css
+++ b/fitness/static/fitness/home.css
@@ -1,5 +1,6 @@
 /* Designed by Brendon Wolfe on February 24th */
 /* Responsive design developed by Eli Sepulveda on March 8th */
+/* Modified by Brendon Wolfe for consistency on April 7th */
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
@@ -24,7 +25,7 @@ body {
     justify-content: space-evenly;
     width: 20%;
     background-color: #232323;
-    padding: 1rem;
+    padding: 2vh;
     border-right: 2px solid #39FF14;
     height: 100%;
 }
@@ -33,18 +34,18 @@ body {
     text-align: center;
     color: #ffdd57;
     text-shadow: 2px 2px 10px rgba(255, 221, 87, 0.8);
-    margin: 0.5rem 0;
+    margin: .8vh 0;
 }
 
 .sidebar a {
     display: block;
     text-align: center;
-    padding: 0.8rem;
+    padding: 1.8vh;
     margin: .8vh 0;
     background-color: #39FF14;
     color: #121212;
     font-weight: bold;
-    border-radius: 0.3rem;
+    border-radius: 7px;
     text-decoration: none;
     font-size: 1.1rem;
     width: 80%;
@@ -53,7 +54,7 @@ body {
 }
 
 .sidebar a:hover {
-    background-color: #2ECC71;
+    background-color: #28a828;
 }
 
 .greeting, .gymName, .gymCode {
@@ -61,54 +62,73 @@ body {
     color: #ffdd57;
 }
 
-.screen {
-    width: 85%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #181818;
-    height: 100%;
-}
-
 .leaderboard{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    overflow-y: auto;
     width: 80%;
-
+    height: 100%;
+    padding-bottom: 10vh;
+    margin-top: 1vh;
 }
 
 .leaderboard h1 {
     color: #ffdd57;
     font-size: 2rem;
     text-shadow: 2px 2px 5px rgba(255, 221, 87, 0.8);
-    margin-bottom: 1rem;
+    margin-bottom: 2vh;
 }
 
 .leaderboard h3 {
     color: #ffdd57;
-    font-size: 1.25rem;
+    font-size: 1rem;
     text-shadow: 2px 2px 5px rgba(255, 221, 87, 0.8);
-    margin-bottom: 1rem;
 }
 
 .board {
     display: grid;
     grid-template-columns: 100%;
     width: 100%;
-    overflow-y: auto;
+    padding-right: 4vw;
 }
 
 .board_user {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
-    width: 60%;
+    justify-content: space-evenly;
+    width: 100%;
 }
 
+.left{
+    display: flex;
+    align-items: center;
+    width: 33.3%;
+}
 
+.left img {
+    margin-left: 35%;
+}
+
+.center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 33.3%;
+
+}
+
+.right{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 33.3%;
+}
+
+.board_pfp{
+    width: 8%;
+}
 
 .logoDivHome{
     display: none;
@@ -119,7 +139,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-bottom: 5vh;
+    height: 5vh;
 }
 
 .swapLeaderboard{
@@ -127,7 +147,10 @@ body {
     border-radius: 5px;
     background-color: #39FF14;
     cursor: pointer;
+    margin-top: 8vh;
 }
+
+/* Responsive design section */
 
 @media screen and (max-width: 600px) {
     body {
@@ -136,7 +159,8 @@ body {
 
     .container {
         flex-direction: column;
-        height: 20vh;
+        height: auto;
+        min-height: 100vh;
         top: 0;
     }
 
@@ -147,26 +171,20 @@ body {
         border-right: none;
         border-bottom: 2px solid #39FF14;
         justify-content: space-evenly;
-        padding: 0.5rem;
+        padding: 1vh;
         top: 0;
     }
 
     .sidebar a {
         width: 95%;
-        padding: 0.6rem;
+        padding: .75vh;
         font-size: 0.9rem;
-        margin: 0.5rem;
+        margin: .75vh;
     }
 
     .sidebar h2, .sidebar h3 {
         font-size: 1rem;
-        margin: 0.3rem 0;
-    }
-
-    .screen {
-        width: 100%;
-        flex-direction: column;
-        padding: 1rem;
+        margin: .25vh 0;
     }
 
     .greeting, .gymCode {
@@ -180,8 +198,12 @@ body {
 
     .leaderboard {
         width: 100%;
-        margin-top: 1rem;
+        bottom: 0;
+        margin-top: 1vh;
+        z-index: 0;
+        padding-bottom: 6vh;
     }
+
 
     .logoDivHome{
         left: 0;
