--- a/fitness/static/fitness/view_current_tasks.css
+++ b/fitness/static/fitness/view_current_tasks.css
@@ -1,4 +1,5 @@
 /* Designed by Brendon Wolfe on March 6th */
+/* Modified by Brendon Wolfe for consistency on April 7th */
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
@@ -19,12 +20,12 @@ h1 {
     font-size: 2rem;
     color: #ffdd57;
     text-shadow: 2px 2px 10px rgba(255, 221, 87, 0.8);
-    margin-top: 1.5rem;
+    margin-top: 4vh;
 }
 
 p {
     font-size: 1.2rem;
-    margin: 0.5rem 0;
+    margin: 1.5vh 0;
 }
 
 
@@ -44,7 +45,7 @@ a {
     color: #232323;
     font-size: 1.2rem;
     font-weight: bold;
-    padding: 10px 20px;
+    padding: 1.5vh 2vw;
     border: none;
     border-radius: 8px;
     cursor: pointer;
@@ -71,7 +72,7 @@ li {
     background-color: #232323;
     padding: 1rem;
     border-radius: 10px;
-    margin: 0.5rem 0;
+    margin: 1.25vh 0;
     width: 15vw;
     transition: background-color 0.3s ease;
     box-shadow: 0px 0px 15px #ffdd57;
@@ -85,7 +86,7 @@ li:hover {
 
 li a {
     width: 15vw;
-    padding: 0.5rem 0;
+    padding: 1.25vh 0;
     color: #ffdd57;
     text-shadow: none;
 }
