--- a/fitness/templates/fitness/home.html
+++ b/fitness/templates/fitness/home.html
@@ -59,10 +59,16 @@
             <ul class="board">
                 {% for l_user_name, l_coins, l_pfp in leaderboard %}
                         <div class="board_user">
-                            <img src="{% static l_pfp %}" class="board_pfp">
-                            <h3>{{l_user_name}} </h3>
-                            <h3> - </h3>
-                            <h3>{{l_coins}}</h3>
+                            <div class="left">
+                                <img src="{% static l_pfp %}" class="board_pfp">
+                                <h3>{{l_user_name}} </h3>
+                            </div>
+                            <div class="center">
+                                <h3> - </h3>
+                            </div>
+                            <div class="right">
+                                <h3>{{l_coins}}</h3>
+                            </div>
                         </div>
                 {% endfor %}
                     </ul>
