--- a/fitness/templates/fitness/profile.html
+++ b/fitness/templates/fitness/profile.html
@@ -1,5 +1,4 @@
 <!-- Designed by Brendon Wolfe on March 6th -->
-
 {% extends 'fitness/header.html' %}
 {% load static %}
 {% block content%}
@@ -8,16 +7,16 @@
 <body>
     <div class="left">
         <img src="{% static pfp %}" class="profilePic">
-        <p class="badgeTitle">Profile Pictures</p>
-        <div class="badgeContainer">
-            <a href="{% url 'fitness:set_profile_picture' 0 %}"><img src="{% static 'gym/pfp/default.png' %}" class="badges"></a>
-            <a href="{% url 'fitness:set_profile_picture' 1 %}"><img src="{% static 'gym/pfp/p2.png' %}" class="badges"></a>
-            <a href="{% url 'fitness:set_profile_picture' 2 %}"><img src="{% static 'gym/pfp/p3.png' %}" class="badges"></a>
+        <p class="profileTitle">Profile Pictures</p>
+        <div class="profileContainer">
+            <a href="{% url 'fitness:set_profile_picture' 0 %}"><img src="{% static 'gym/pfp/default.png' %}" class="profilePict"></a>
+            <a href="{% url 'fitness:set_profile_picture' 1 %}"><img src="{% static 'gym/pfp/p2.png' %}" class="profilePict"></a>
+            <a href="{% url 'fitness:set_profile_picture' 2 %}"><img src="{% static 'gym/pfp/p3.png' %}" class="profilePict"></a>
         </div>
-        <div class="badgeContainer">
-            <a href="{% url 'fitness:set_profile_picture' 3 %}"><img src="{% static 'gym/pfp/p4.png' %}" class="badges"></a>
-            <a href="{% url 'fitness:set_profile_picture' 4 %}"><img src="{% static 'gym/pfp/p5.png' %}" class="badges"></a>
-            <a href="{% url 'fitness:set_profile_picture' 5 %}"><img src="{% static 'gym/pfp/p6.png' %}" class="badges"></a>
+        <div class="profileContainer">
+            <a href="{% url 'fitness:set_profile_picture' 3 %}"><img src="{% static 'gym/pfp/p4.png' %}" class="profilePict"></a>
+            <a href="{% url 'fitness:set_profile_picture' 4 %}"><img src="{% static 'gym/pfp/p5.png' %}" class="profilePict"></a>
+            <a href="{% url 'fitness:set_profile_picture' 5 %}"><img src="{% static 'gym/pfp/p6.png' %}" class="profilePict"></a>
         </div>
     </div>
     <div class="right">
