--- a/fitness/templates/fitness/task_details.html
+++ b/fitness/templates/fitness/task_details.html
@@ -1,3 +1,4 @@
+<!-- Modified by Brendon Wolfe for consistency on April 7th -->
 {% extends 'fitness/header.html' %}
 {% load static %}
 {% block content%}
@@ -6,7 +7,7 @@
     <h1>Task: {{ task.name }}</h1>
 
     <p> Exercise: 
-        <a href="{% url 'exercises:view_exercise' task.exercise_id %}">
+        <a href="{% url 'exercises:view_exercise' task.exercise_id %}" class="aButton">
             {{task.exercise_name}}
         </a>
     </p>
@@ -29,7 +30,7 @@
     </form>
 
     <p>
-        <a href="{% url 'fitness:view_current_tasks' %}">
+        <a href="{% url 'fitness:view_current_tasks' %}" class="aButton">
         Return to Tasks
         </a>
     </p>
