--- a/gym/static/gym/search_knights.css
+++ b/gym/static/gym/search_knights.css
@@ -1,4 +1,5 @@
 /* Designed by Brendon Wolfe on March 2nd */
+/* Modified by Brendon Wolfe for consistency on April 6th */
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
@@ -11,22 +12,22 @@ h1 {
     text-align: center;
     color: #ffdd57;
     text-shadow: 2px 2px 10px rgba(255, 221, 87, 0.8);
-    margin: 1.25rem 0;
+    margin: 3vh 0;
 }
 
 .error-message {
     text-align: center;
     color: red;
     font-size: 1.2rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: 3vh;
 }
 
 .search-knights-form {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 0.75rem;
-    margin-bottom: 2rem;
+    gap: 1vh;
+    margin-bottom: 6vh;
 }
 
 .search-knights-form label {
@@ -35,18 +36,18 @@ h1 {
 }
 
 .search-knights-form input {
-    padding: 0.5rem;
-    border-radius: 0.3rem;
-    border: 0.06rem solid #39FF14;
+    padding: 1vh;
+    border-radius: 6px;
+    border: 1px solid #39FF14;
     font-size: 1rem;
     background-color: #232323;
     color: white;
 }
 
 .search-knights-form button {
-    padding: 0.6rem 1rem;
+    padding: 1vh 2vw;
     border: none;
-    border-radius: 0.25rem;
+    border-radius: 6px;
     font-family: 'Rajdhani', sans-serif;
     font-weight: bold;
     cursor: pointer;
@@ -61,7 +62,7 @@ h1 {
 }
 
 .list-div {
-    max-width: 35rem;
+    max-width: 50vw;
     margin: 0 auto;
 }
 
@@ -72,10 +73,10 @@ h1 {
 
 .list-div li {
     background-color: #232323;
-    border: 0.06rem solid #39FF14;
-    border-radius: 0.3rem;
-    padding: 1rem;
-    margin-bottom: 1rem;
+    border: 1px solid #39FF14;
+    border-radius: 6px;
+    padding: 3vh;
+    margin-bottom: 3vh;
     font-size: 1.2rem;
     color: white;
     text-align: center;
@@ -93,14 +94,14 @@ h1 {
 .noResults {
     text-align: center;
     color: red;
-    margin-top: 3rem;
+    margin-top: 6vh;
     font-size: 1.2rem;
 }
 
 .footer{
     position: fixed;
-    bottom: .1rem;
-    margin-left: .5rem;
+    bottom: .2vh;
+    margin-left: .8vw;
 }
 
 .footer a {
@@ -124,7 +125,7 @@ h1 {
     margin-left: 20%;
     margin-top: 2%;
     border-radius: 50px;
-    padding-bottom: 1rem;
+    padding-bottom: 1.5vh;
     box-shadow: 0px 0px 10px rgba(255, 221, 87, 0.8);
 }
 
@@ -136,10 +137,11 @@ h1 {
     background-color: green;
     text-decoration: none;
     border-radius: 4px;
+    margin-left: .5vw;
 }
   
 .btn:hover {
-    background-color: #2ECC71;
+    background-color: #28a828;
 }
   
 .btn-danger {
