--- a/gym/static/gym/signup.css
+++ b/gym/static/gym/signup.css
@@ -1,5 +1,5 @@
-
 /* Designed by Eli Sepulveda on March 17th */
+/* Modified by Brendon Wolfe for consistency on April 6th */
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
@@ -21,7 +21,7 @@ h1 {
     font-size: 2.2rem;
     color: #ffdd57;
     text-shadow: 2px 2px 10px rgba(255, 221, 87, 0.8);
-    margin-bottom: 1rem;
+    margin-bottom: 1vh;
 }
 
 .signup-form {
@@ -30,12 +30,12 @@ h1 {
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(255, 221, 87, 0.3);
     width: 60%;
-    max-width: 500px;
+    max-width: 45vw;
     text-align: left;
 }
 
 .signup-form p {
-    margin: 1rem 0;
+    margin: 2vh 0;
     display: flex;
     flex-direction: column;
 }
@@ -44,16 +44,10 @@ input, select {
     background-color: #1a1a1a;
     color: white;
     border: 1px solid #ffdd57;
-    padding: 10px;
+    padding: 1vw;
     border-radius: 5px;
     font-size: 1rem;
-    transition: border-color 0.3s ease;
-    margin-bottom: 1rem;
-}
-
-input:focus, select:focus {
-    border-color: #f4c430;
-    outline: none;
+    margin-bottom: 1vh;
 }
 
 select {
@@ -66,13 +60,13 @@ button {
     color: #232323;
     font-size: 1.2rem;
     font-weight: bold;
-    padding: 10px 20px;
+    padding: 1vh 2vw;
     border: none;
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.3s, transform 0.2s;
     width: 100%;
-    margin-top: 1rem;
+    margin-top: 2vh;
 }
 
 button:hover {
