--- a/fitness/static/fitness/home.css
+++ b/fitness/static/fitness/home.css
@@ -67,10 +67,14 @@ body {
     flex-direction: column;
     align-items: center;
     overflow-y: auto;
+    overflow-x: hidden;
     width: 80%;
     height: 100%;
-    padding-bottom: 10vh;
     margin-top: 1vh;
+}
+
+.leaderboard_form {
+    padding-bottom: 4vh;
 }
 
 .leaderboard h1 {
@@ -201,9 +205,11 @@ body {
         bottom: 0;
         margin-top: 1vh;
         z-index: 0;
-        padding-bottom: 6vh;
     }
 
+    .leaderboard_form {
+        padding-bottom: 14vh;
+    }
 
     .logoDivHome{
         left: 0;
