--- a/gym/templates/gym/signup.html
+++ b/gym/templates/gym/signup.html
@@ -36,6 +36,6 @@
     <button type="submit">Submit</button>
 </form>
 <p>Already have an account?</p>
-<h2><a href="{% url 'gym:login' %}">Login</a></h2>
+<h2><a href="{% url 'gym:login' %}" class="loginButton">Login</a></h2>
 
 {% endblock %}
