--- a/fitness/static/fitness/task_details.css
+++ b/fitness/static/fitness/task_details.css
@@ -5,7 +5,7 @@
 
 body {
     font-family: 'Rajdhani', sans-serif;
-    background-color: #121212;
+    background-color: #181818;
     color: white;
     margin: 0;
     padding: 0;
@@ -31,6 +31,18 @@ p {
 
 .rewardDiv {
     margin: 3vh 0;
+}
+
+.container {
+    background-color: #121212;
+    width: 40%;
+    max-width: 48vw;
+    padding: 2vh;
+    padding-bottom: 3vh;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(255, 221, 87, 0.8);
+    text-align: center;
+    margin-top: 5vh;
 }
 
 /* This is currently commented out in the HTML due to reward changes */
